<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="@string/serversettingcategorytitle">

        <EditTextPreference
            android:defaultValue="@string/localserverip"
            android:key="local_server_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/localserveriptitle" />

        <EditTextPreference
            android:defaultValue="@string/serverremoteip"
            android:key="server_remote_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/serverremoteiptitle" />

        <EditTextPreference
            android:defaultValue="@string/userdefault"
            android:key="username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/usernametitle" />

        <EditTextPreference
            android:defaultValue="@string/passworddefault"
            android:key="password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/passwordtitle" />
    </PreferenceCategory>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
